--- a/UserHomepagee.html
+++ b/UserHomepagee.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -10,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 <!--Header start-->
 <header class="header">
@@ -48,13 +50,10 @@
       <div class="main-heading">
         <div style="width: 100%;overflow:auto;">
           <div style="float:left; width: 68% ;justify-content: center">
+            <h1 align="center" >Employee Homepage</h1>
+            <br><br><br>
             <fieldset>
-
-
               <legend>Table of Borrowed Items</legend>
-              <p><strong></strong></p>
-              <br>
-
               <table class="c1" border="3" align="center" style="margin: 0px auto;">
                 <tr>
                   <th>Item Name </th>
@@ -65,38 +64,29 @@
                 </tr>
               </table>
             </fieldset>
-
             <div class="wrapper">
-              <p><strong></strong></p>
-              --Asset to be added--
               <br>
-
-              <p><strong></strong></p>
-              <button class="btn btn-gradient" align="center">Borrow Item</button>
+              --Asset to be added--
+              <br><br><br>
+              <a href="#" button class="btn btn-gradient" align="center">Borrow Item</button>
+              </a>
             </div>
 
           </div>
-          <div style="float:right;width: 25%; bold:400">
+          <div style="float:right;width: 25%; bold:400" align="left">
             <br>UserId : <br>
             <br>Email : <br>
             <br>Name : <br>
             <br>Last Login : <br>
-            <p><strong></strong></p>
-            <fieldset>
-              <br>
-
-
-              <legend>Messages</legend>
-              <br>
+            <br>
+            <fieldset align="center">
+              <legend align="center">Messages</legend>
               Hello, Admin has send message for you!
             </fieldset>
-
           </div>
         </div>
-
       </div>
-
-        <span class="dots"><i class="fas.fa-ellipsis-h"></i></span>
+      <span class="dots"><i class="fas.fa-ellipsis-h"></i></span>
       </a>
     </div>
   </div>
@@ -178,4 +168,5 @@
 </footer>
 <script src="main.js"></script>
 </body>
+
 </html>
